--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node ./src/index.js"
+    "start":"set APP_ENV=prod&& node ./src/index.js",
+    "dev":"set APP_ENV=dev&& node ./src/index.js"
   },
   "author": "",
   "license": "ISC",
