Algo para linux

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"set APP_ENV=prod&& node ./src/index.js",
+    "start":"export APP_ENV=prod&& node ./src/index.js",
     "dev":"set APP_ENV=dev&& node ./src/index.js"
   },
   "author": "",
