--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "ip": "^2.0.1",
+    "nodemailer": "^6.9.13",
     "redis": "^4.6.13",
     "request-ip": "^3.3.0"
   }
